Updates from Overleaf

--- a/doc/sections/conclusion.tex
+++ b/doc/sections/conclusion.tex
@@ -2,6 +2,8 @@
 
 \begin{document}
 \section{Conclusion}\label{sec:conclusion}
-Conclusion
+After applying the three different regression models to the terrain data, various types of data, both  Franke's function and real life terrain data, it is easy to see that all three models can be used to regress data as long as the parameters are chosen carefully. Even though the best parameters are chosen carefully, the models naturally have different success rate. In this article it has been concluded that for the data analyzed, the best regression method was Ridge regression, closely followed by LASSO regression, and OLS at last.\\
+
+For the future it would be interesting to try the methods on different data sets and see how the results are dependent of the dataset. Another task for the future would be to run the methods on a powerful computer, providing the opportunity to analyze the whole terrain dataset instead of the small part of it.
 
 \end{document}
