--- a/doc/sections/theory.tex
+++ b/doc/sections/theory.tex
@@ -27,8 +27,8 @@ and we define it for the interval $x,y\in[0,1]$. An illustration of Franke's fun
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width = 3in]{../assets/frankesfunction_plot.png}
-  \caption{Shape of Franke's function which will be used as a interpolating goal \cite{FrankeRichard1979}.}
+  \includegraphics[width = 3in]{../assets/actual_franke_plot.png}
+  \caption{Shape of Franke's function which will be used as a interpolating goal}
   \label{fig:frankesplot}
 \end{figure}
 
