--- a/doc/sections/discussion.tex
+++ b/doc/sections/discussion.tex
@@ -7,7 +7,7 @@
 \subsection{Methods applied to Terrain data}
 By comparing the statistical values MSE and $R^2$ for the three models it is possible to determine which regression model has the best prediction to the terrain dataset. Since the MSE is a statistical value for the errors, the less the value of MSE the better. The $R^2$ score is a measurement of how well the model predicts, and account for the variance. Closer to 1 the $R^2$ score is the better the prediction is.\\
 
-Having a look at table \ref{tab:statistical_results}, the MSE for OLS is a bit high having a value of 160.9 with a $R^2$ score that is doing quiet well, 0.9156. The OLS regression parameters in figure \ref{fig:OLS_CI} also seem to have quiet low variance which is supporting the good $R^2$ score. Looking at the Ridge results it is easy to see that the MSE and $R^2$ score are extremely good with about the value of 1 for each one. The LASSO regression was also doing quiet good with a $R^2$ score that is about the same as Ridge, but with a bit higher MSE, 13.39.  All though the methods are predicting the data quiet good, Ridge and LASSO having such low MSE and high $R^2$ score, makes them belong a couple of levels higher than OLS.
+Having a look at table \ref{tab:statistical_results}, the MSE for OLS is a bit high having a value of 160.9 with a $R^2$ score that is doing quiet well, 0.9156. The OLS regression parameters in figure \ref{fig:OLS_CI} also seem to have quiet low variance which is supporting the good $R^2$ score. Looking at the Ridge results it is easy to see that the MSE and $R^2$ score are extremely good with about the value of 1 for each one. The LASSO regression was also doing quite good with a $R^2$ score that is about the same as Ridge, but with a bit higher MSE, 9.56.  All though the methods are predicting the data quiet good, Ridge and LASSO having such low MSE and high $R^2$ score, makes them belong a couple of levels higher than OLS.
 
 \begin{table}[H]
 \begin{center}
@@ -15,9 +15,9 @@ Having a look at table \ref{tab:statistical_results}, the MSE for OLS is a bit h
  \hline
   & OLS & Ridge & LASSO \\ 
  \hline
- MSE & 160.9 & 0.9099 & 11.01\\
+ MSE & 160.9 & 0.9099 & 9.56\\
  \hline
- $R^2$ & 0.9156 & 0.9995 & 0.9942 \\ 
+ $R^2$ & 0.9156 & 0.9995 & 0.9949 \\ 
  \hline
 \end{tabular}
 \label{tab:statistical_results}
@@ -25,7 +25,7 @@ Having a look at table \ref{tab:statistical_results}, the MSE for OLS is a bit h
 \end{center}
 \end{table}
 
-Knowing that OLS is Ridge having $\lambda$=0, it is within reason to assume that the results of Ridge and OLS could have been more similar, due to the low $\lambda=1.311\cdot10^{-10}$ used in Ridge. But then remembering the computational expense used to calculate the best d and $\lambda$ for both Ridge and LASSO it makes sense having Ridge and LASSO that good. LASSO was especially computational expensive. Knowing that there is no analytical solution to LASSO, opened up for the idea of treating the LASSO method with a bit more iterations than Ridge. LASSO was treated with the privilege of gridding over 50 different values for both $\lambda$ and d, searching for the lowest MSE. This explains why LASSO is showing such a good result, but because LASSO was a bit more computational heavy than Ridge, and still got a little bit worse result, this puts LASSO in a 2nd place.
+Knowing that OLS is Ridge having $\lambda$=0, it is within reason to assume that the results of Ridge and OLS could have been more similar, due to the low $\lambda=1.311\cdot10^{-10}$ used in Ridge. But then remembering the computational expense used to calculate the best d and $\lambda$ for both Ridge and LASSO it makes sense having Ridge and LASSO that good. LASSO was especially computational expensive. Knowing that there is no analytical solution to LASSO, opened up for the idea of treating the LASSO method with a bit more iterations than Ridge. LASSO was treated with the privilege of gridding over 50 different values for both $\lambda$ and $d$, searching for the lowest MSE. This explains why LASSO is showing such a good result, but because LASSO was a bit more computational heavy than Ridge, and still got a little bit worse result, this puts LASSO in a 2nd place.
 
 
 
