More changes from Overleaf

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -17,6 +17,7 @@
 \usepackage{cleveref}
 \usepackage{caption}
 \usepackage{subcaption}
+\usepackage{booktabs}
 
 \graphicspath{{img/}{../img/}}
 \bibliography{references.bib}
