--- a/doc/sections/introduction.tex
+++ b/doc/sections/introduction.tex
@@ -2,7 +2,7 @@
 
 \begin{document}
 \section{Introduction}\label{sec:introduction}
-The goal of this project is to explore a number of different methods which is quiet popular within the field of machine learning. The methods that will be explored are the ordinary least square method (OLS), ridge regression and LASSO regression which will be used to find unknown parameters when performing interpolation and fitting tasks. The methods will be tested on a two-dimensional function called Franke’s function.
+The motivation of this project is to explore a number of different methods which is quiet popular within the field of machine learning. The methods that will be explored are the ordinary least square method (OLS), ridge regression and LASSO regression which will be used to find unknown parameters when performing interpolation and fitting tasks. The methods will be tested on a two-dimensional function called Franke’s function.
 
 After the methods are settled and ready to go, a few different resampling techniques will be combined with the methods to evaluate the effectiveness. The resampling techniques to be used are the bootstrap method and the cross-validation method. The Bias-Variance trade off will also be studied in the article.
 
